// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Textarea snapshot size lg 1`] = `
<textarea
  class="component text-dark-aaaa text-md max-w-full placeholder-dark-a ring-inset border rounded focus:ring-dark-link bg-white  focus:ring-1 p-3  h-12 border-gray-500 disabled:text-dark-a disabled:bg-gray-200 disabled:border-dark-aa w-auto"
>
  large
</textarea>
`;

exports[`Textarea snapshot size md 1`] = `
<textarea
  class="component text-dark-aaaa text-md max-w-full placeholder-dark-a ring-inset border rounded focus:ring-dark-link bg-white  focus:ring-1 px-3 py-2 h-10 border-gray-500 disabled:text-dark-a disabled:bg-gray-200 disabled:border-dark-aa w-auto"
>
  medium
</textarea>
`;

exports[`Textarea snapshot size sm 1`] = `
<textarea
  class="component text-dark-aaaa text-md max-w-full placeholder-dark-a ring-inset border rounded focus:ring-dark-link bg-white  focus:ring-1 px-3 py-1 h-8 border-gray-500 disabled:text-dark-a disabled:bg-gray-200 disabled:border-dark-aa w-auto"
>
  small
</textarea>
`;
